<resources>
    <string name="app_name">ServiceMaster</string>

    <!--authentication activities -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="resetEmail">Send email reset link</string>

    <!-- dashboard activity -->
    <string name="welcome">Welcome</string>
    <string name="newCheckin">New CheckIn</string>
    <string name="active">Active</string>
    <string name="completed">Completed</string>

    <!-- Active activity -->
    <string name="activeTitle">Active</string>
    <string name="view">View</string>

    <!-- form1 activity -->
    <string name="form1Title">Customer and vehicle details</string>
    <string name="regNo">Reg. No</string>
    <string name="financier">Financier</string>
    <string name="customer">Customer</string>
    <string name="motorist">Motorist</string>
    <string name="telNo">Tel. No</string>
    <string name="idNo">Id. No</string>
    <string name="dateIn">Date In</string>
    <string name="jobType">Job Type</string>
    <string name="duration">Duration</string>
    <string name="promisedDate">Promised Date</string>
    <string name="postalAddress">Postal Address</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="chassisNo">Chassis No</string>
    <string name="engineNo">Engine No</string>
    <string name="vinNo">Vin No</string>
    <string name="fuel">Fuel</string>
    <string name="odometer">Odometer</string>
    <string name="manualJobCardNo">Manual JobCard No</string>
    <string name="towedBy">Towed By</string>

    <!-- form2 activity -->
    <string name="form2Title">Insurance and Service</string>
    <string name="insuranceSticker">Insurance Sticker</string>
    <string name="inspectionSticker">Inspection Sticker</string>
    <string name="claimNo">Claim No</string>
    <string name="serviceAdvisor">Service Advisor</string>

    <!-- form3 activity -->
    <string name="form3Title">Exterior</string>
    <string name="checked">Yes/No</string>
    <string name="remarks">Remarks</string>
    <string name="overallAppearance">Overall Appearance</string>
    <string name="sideMirrors">Side Mirrors</string>
    <string name="noOfKeys">No. of Keys</string>
    <string name="fogSpotLights">Fog/Spot Lights</string>
    <string name="antennaAerial">Antenna/Aerial</string>
    <string name="regNoPlateFront">Reg. No. Plate Front</string>
    <string name="frontBumper">Front Bumper</string>
    <string name="fuelTankCap">Fuel Tank Cap</string>
    <string name="frontWindscreen">Front Windscreen</string>
    <string name="rearWindscreen">Rear Windscreen</string>
    <string name="headLightsLenses">Head Lights Lenses</string>
    <string name="tailLightsLenses">Tail Lights Lenses</string>
    <string name="wipers">Wipers</string>
    <string name="regNoPlateRear">Reg. Number Plate Rear</string>
    <string name="rearBumper">Rear Bumper</string>

    <!-- form4 activity -->
    <string name="form4Title">Interior</string>
    <string name="rearViewMirror">Rear View Mirror</string>
    <string name="windowSwitches">Window Switches</string>
    <string name="floorMatsCarpet">Floor Mats/Carpet</string>
    <string name="dashboard">Dashboard</string>
    <string name="engineSensorsAndFuses">Engine Sensors And Fuses</string>
    <string name="washerBottle">Washer Bottle</string>
    <string name="cigarLighter">Cigar Lighter</string>
    <string name="speaker">Speaker</string>
    <string name="radioCassetteCd">Radio/Cassette/CD</string>
    <string name="engineCompartment">Engine Compartment</string>
    <string name="computerBox">Computer Box</string>
    <string name="horn">Horn</string>

    <!-- form5 activity -->
    <string name="form5Title">Wheels</string>
    <string name="wheelsRims">Wheels Rims</string>
    <string name="wheelsCapsHubs">Wheels Caps/Hubs</string>
    <string name="mudflap">Mudflap</string>
    <string name="steeringWheel">Steering Wheel</string>

    <!-- form6 activity -->
    <string name="form6Title">Tyres and battery</string>
    <string name="serialNo">Serial No.</string>
    <string name="condition">Condition</string>
    <string name="rhsf">RHSF</string>
    <string name="rhsr">RHSR</string>
    <string name="lhsf">LHSF</string>
    <string name="lhsr">LHSR</string>
    <string name="sWheel">S/Wheel</string>
    <string name="battery">Battery</string>

    <!-- form7 activity -->
    <string name="form7Title">Standard Tools</string>
    <string name="general">General remarks/Work to be done</string>
    <string name="jackAndHandler">Jack And Handler</string>
    <string name="lifeSavers">Life Savers</string>
    <string name="spacialNut">Spacial Nut</string>
    <string name="towingPin">Towing Pin</string>
    <string name="jumperCables">Jumper Cable</string>
    <string name="wheelSpanner">Wheel Spanner</string>
    <string name="fireExtinguisher">Fire Extinguisher</string>
    <string name="firstAidKit">First Aid Kit</string>
    <string name="towingRope">Towing Rope</string>
    <string name="ownersManual">Owners Manual</string>

    <!-- form8 activity -->
    <string name="form8Title">Image Capture</string>
    <string name="submit">Submit</string>
    <string name="title_activity_form_inputs">FormInputsActivity</string>

</resources>