<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/customerActiveText"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/customer" />

        <TextView
            android:id="@+id/regNoActiveText"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/regNo" />

        <TextView
            android:id="@+id/jobTypeActiveText"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/jobType" />

        <TextView
            android:id="@+id/durationActiveText"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/duration" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/viewActiveButton"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/view" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="30dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>