<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActiveActivity">
    <ImageView
        android:id="@+id/backButtonActive"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@drawable/ic_back_arrow" />

    <TextView
        android:id="@+id/activeTextView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp"
        android:text="@string/active"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/customer"
            />
        <TextView
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/regNo"
            />
        <TextView
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/jobType"
            />
        <TextView
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/duration"
            />
        <TextView
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/view"
            />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activeRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>