<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/loginUsernameTextInputLayout"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="300dp"
      android:layout_height="100dp"
      android:layout_marginTop="200dp"
      app:endIconMode="clear_text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:startIconDrawable="@drawable/ic_person"

      >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginUsernameTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textPersonName" />


  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/passwordTextInputLayout"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="300dp"
      android:layout_height="100dp"
      android:layout_marginStart="1dp"
      android:layout_marginEnd="1dp"
      app:endIconMode="password_toggle"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/loginUsernameTextInputLayout"
      app:startIconDrawable="@drawable/ic_lock">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginPasswordTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.button.MaterialButton
      android:id="@+id/loginButton"
      android:layout_width="300dp"
      android:layout_height="60dp"
      android:layout_marginTop="60dp"
      android:backgroundTint="@color/blue"
      android:text="@string/login"
      app:cornerRadius="30dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.504"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />

  <TextView
      android:id="@+id/forgotPasswordLink"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/forgotPassword"
      android:textColor="@color/blue"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.814"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>