<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/form6TextView"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:text="text" />

        <EditText
            android:id="@+id/form6EditText1"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginStart="0dp"
            android:background="@drawable/text_input"
            android:hint="@string/make"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="5dp" />

        <EditText
            android:id="@+id/form6EditText2"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginStart="2dp"
            android:background="@drawable/text_input"
            android:hint="@string/serialNo"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="5dp" />

        <EditText
            android:id="@+id/form6EditText3"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginStart="2dp"
            android:background="@drawable/text_input"
            android:hint="@string/condition"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="5dp" />


    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="70dp"
        app:cardBackgroundColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="50dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>